# stablecoin_quant

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  create.py  mypy.ini  pyproject.toml
.github/: AGENTS.md
.github/actions/codex-request/: action.yml
.github/actions/restore-environment/: action.yml
.github/actions/setup-project/: action.yml
.github/workflows/: ci.yml  codex-comments.yml  codex-issues.yml  codex-review.yml  codex.yml  daily-demo-images.yml  demo.yml  pre-commit.yml  setup-environment.yml  tests.yml
configs/: demo.toml
docs/: demo_artifacts.md  investor_walkthrough.md  sample_data_provenance.md
source/: sample_pools.csv  stable_yield_demo.py  stable_yield_lab.py
src/: AGENTS.md  sample_pools.csv  sample_pools_history.csv  sample_yields.csv  stable_yield_demo.py  stable_yield_lab.py
src/stable_yield_lab/: __init__.py  attribution.py  metrics.py  performance.py  portfolio.py  rebalance.py  reporting.py  risk_metrics.py  risk_scoring.py
src/stable_yield_lab/analytics/: AGENTS.md  __init__.py  attribution.py  metrics.py  performance.py  portfolio.py  risk.py
src/stable_yield_lab/core/: AGENTS.md  __init__.py  constants.py  models.py  repositories.py
src/stable_yield_lab/pipeline/: AGENTS.md  __init__.py
src/stable_yield_lab/reporting/: AGENTS.md  __init__.py
src/stable_yield_lab/sources/: AGENTS.md  __init__.py  base.py  beefy.py  csv.py  defillama.py  morpho.py
src/stable_yield_lab/visualization/: AGENTS.md  __init__.py  visualizer.py
tests/: AGENTS.md  conftest.py  test_attribution.py  test_demo_config.py  test_historical.py  test_metrics.py  test_performance.py  test_pipeline.py  test_portfolio.py  test_portfolio_apy.py  test_portfolio_rebalances.py  test_reporting.py  test_reporting_realised_apy.py  test_risk_metrics.py  test_risk_scoring.py  test_sanity.py  test_sources.py  test_visualizer.py
tests/analytics/: AGENTS.md  test_attribution.py  test_metrics.py  test_performance.py  test_portfolio.py  test_risk.py
tests/core/: AGENTS.md  test_repositories.py
tests/fixtures/: defillama_pools.json  morpho_markets.json  pools.csv  returns_gaps.csv  returns_irregular.csv  returns_negative.csv  sample_history_expected.json
tests/pipeline/: AGENTS.md  test_demo_config.py  test_historical.py  test_pipeline.py  test_pipeline_integration.py
tests/reporting/: AGENTS.md  test_reporting.py  test_reporting_realised_apy.py
tests/sources/: AGENTS.md  test_beefy.py  test_csv.py  test_defillama.py  test_morpho.py
tests/visualization/: AGENTS.md  test_visualizer.py  test_visualizer_io.py
(+5 files in other folders)
