[tool.poetry]
name = "stablecoin-quant"
version = "0.1.0"
description = ""
authors = ["Axel Lode <auj.lode@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "stable_yield_lab", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
matplotlib = ">=3.10.6,<4.0.0"
datetime = ">=5.5,<6.0"
pandas = ">=2.3.2,<3.0.0"

[tool.poetry.group.dev.dependencies]
black = ">=24.0.0"
mypy = ">=1.8.0"
pytest = ">=8.0.0"
pandas-stubs = ">=2.3.2,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py312"]

 

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
  "ignore::DeprecationWarning",
]
